--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 	<head>
+		<title>Belajar HTML</title>
 	</head>
 	<body>
+		<h1>Belajar HTML di ITC SMK Negeri 1 Surabaya</h1>
 	</body>
 </html>
